# river

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
river-app/: bun.lockb  package.json  vite.config.ts
river-app/src/: App.svelte
river-onnx/: Cargo.toml  Dockerfile  Makefile  entrypoint.sh  fly.toml
river-onnx/src/: main.rs
river-serve/: Cargo.toml
river-serve/src/: frame_splitter.rs  main.rs  media_streamer.rs  model.rs  river_webrtc.rs
river-zmq-proxy/: Cargo.toml
river-zmq-proxy/src/: main.rs
