[package]
name = "river-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
futures = "0.3.29"
futures-util = "0.3.29"
glob = "0.3.1"
hf-hub = "0.3.2"
image = "0.24.7"
openh264 = "0.4.4"
poem = { version = "1.3.58", features = ["sse", "multipart"] }
rand = "0.8.5"
reqwest = "0.11.22"
serde = "1.0.190"
serde_json = "1.0.108"
tmq = "0.4.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing-subscriber = "0.3.17"
webrtc = "0.9.0"
